Nuevo cambio agrego H2

--- a/GIT/index.html
+++ b/GIT/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>MI PRIMER GIT</h1>
+    <h1>MI PRIMER GIT.</h1>
+    <h2>SOY MAXIMO</h2>
 </body>
 </html>
